--- a/src/components/Gsaphero/_gsaphero.scss
+++ b/src/components/Gsaphero/_gsaphero.scss
@@ -8,7 +8,8 @@
  .gsapHeading {
      font-size: 40px;
      text-align: center;
-     margin-top: 550px;
+     margin-top: 410px;
      color: white;
      font-family: 'Lexend Zetta', sans-serif;
+     z-index: 10;
  }
