--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -13,17 +13,8 @@
     grid-column-start: 2;
     grid-column-end: 4;
     margin-top: 90px;
-    margin-left: 100px;
-}
-
-.processDivider {
-    height: 3px;
-    width:200px;
-    background-color: white;
-    margin-top: -340px;
-    margin-left: 145px;
-    grid-column-start: 2;
-    grid-column-end: 3;
+    // margin-left: 100px;
+    text-align: center;
 }
 
 .processSummary {
@@ -31,7 +22,7 @@
     grid-column-start: 2;
     grid-column-end: 4;
     text-align: center;
-    margin-top: -310px;
+    margin-top: -350px;
     padding-top: -10px;
     font-size: 20px;
 }
