--- a/src/sass/_reservations.scss
+++ b/src/sass/_reservations.scss
@@ -1,3 +1,36 @@
 .reservations {
-    background-color:green;
+    background-color:#525962;
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    justify-items: center;
+    height:500px;
+}  
+
+.resHeading {
+    color: #EDEEC9;
+    font-family: 'Lexend Zetta', sans-serif;
+    text-align: center;
+    grid-column-start: 5;
+    margin-top: 25px;
+    font-size: 20px;
+    border-bottom: 1px white solid;
+    height:50px;
+}
+
+.divider {
+    height: 75px;
+}
+
+.menuHeading {
+    text-align: center;
+    grid-column-start: 5;
+    color: #edeec9;
+    font-family: 'Lexend Zetta', sans-serif;
+    margin-top: 150px;
+    border-bottom: 1px white solid;
+    height:50px;
+}
+
+.openTable {
+    margin-top: -80px;
 }
