--- a/src/sass/_seasonal.scss
+++ b/src/sass/_seasonal.scss
@@ -1,3 +1,15 @@
 .seasonal {
-    background-color:green;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    height: 1000px;
+}
+
+.seasonalHeading {
+    text-align: center;
+    border-bottom: 1px solid black;
+    height: 50px;
+    width:500px;
+    font-family: 'Lexend Zetta', sans-serif;
+    grid-column-start: 3;
+    justify-content:center;
 }
