--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -13,6 +13,9 @@
     grid-column-end: 7;
     margin-top: -110px;
     z-index: 1;
+    -webkit-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+    -moz-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+    box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
 }
 
 #menu2 {
@@ -21,6 +24,9 @@
     grid-column-start: 9;
     grid-column-end: 14;
     margin-top: -110px;
+    -webkit-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+    -moz-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+    box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
 }
 
 #menu3 {
@@ -29,6 +35,9 @@
     grid-column-start: 16;
     grid-column-end: 21;
     margin-top: -110px;
+    -webkit-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+    -moz-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+    box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
 }
 
 #cardInner1 {
