--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,3 +1,17 @@
 .gallery {
-    background-color:red;
+    background-color:#525962;
+    display: grid;
+    grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr 60px;
+    grid-template-rows: repeat(7, 5vw);
+    column-gap: 20px;
+    row-gap: 20px;
+    height: 700px;
+}
+
+.galleryImg1 {
+
+}
+
+.galleryImg2 {
+
 }
