--- a/src/components/Dishitem/_dishitem.scss
+++ b/src/components/Dishitem/_dishitem.scss
@@ -12,7 +12,7 @@
     grid-column-start: 2;
 }
 .dishContent {
-    font-size: 25px;
+    font-size: 24px;
     grid-column-start: 4;
     grid-column-end: 10;
 }
@@ -24,6 +24,6 @@
     margin-bottom: 25px;
     border-bottom: 1px solid black;
     font-family: 'Lexend Zetta', sans-serif;
-    // width: 740px;
+    width: 30vw;
     font-weight: 600;
 }
