--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,17 +1,66 @@
 .gallery {
+    padding: 30px;
     background-color:#525962;
     display: grid;
-    grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr 60px;
-    grid-template-rows: repeat(7, 5vw);
-    column-gap: 20px;
-    row-gap: 20px;
-    height: 700px;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(5, 5vw);
+    grid-gap: 15px;
+    height: 540px;
 }
 
-.galleryImg1 {
-
+.galleryImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.galleryImg2 {
+#galleryImg1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 4;
+}
 
+#galleryImg2 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 4;
+    grid-row-end: 6;
+}
+
+#galleryImg3 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 6;
+}    
+
+#galleryImg4 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 6;
+}
+
+#galleryImg5 {
+    grid-column-start: 5;
+    grid-column-end: 7;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+#galleryImg6 {
+    grid-column-start: 7;
+    grid-column-end: 9;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+#galleryImg7 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 3;
+    grid-row-end: 6;
 }
