--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,3 +1,10 @@
 .footer {
-    background-color:red;
+    background-color: #525962;
+    height: 60px;
+}
+
+.footerMessage {
+    text-align: center;
+    color: white;
+    font-family: 'Lexend Peta', sans-serif;
 }
