--- a/src/sass/_hours.scss
+++ b/src/sass/_hours.scss
@@ -1,3 +1,63 @@
 .hours {
-    background-color:green;
+    background-color:#525962;
+    display: grid;
+    grid-template-columns: repeat(28, 1fr);
+    height: 470px;
+    padding: 30px;
+}
+
+// #hoursCard {
+//     grid-column-start: 1;
+//     grid-column-end: 10;
+//     height: 490px;
+//     background-color: #edeec9;
+//     z-index: 1;
+// }
+// #hoursCardInner {
+//     background-color: #30332e;
+//     grid-column-start: 11;
+//     grid-column-end: 13;
+//     z-index:399;
+// }
+
+#hoursCard {
+    background-color: #edeec9; 
+    grid-column-start: 1;
+    grid-column-end: 14;
+    -webkit-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+    -moz-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+    box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+    z-index: 4;
+    height: 380px;
+}
+
+#hoursCardInner {
+    background-color: #30332e; 
+    height:360px;
+    grid-column-start: 1;
+    grid-column-end: 14;
+    margin-left:10px;
+    margin-right:10px;
+    margin-top:10px;
+    margin-bottom: 10px;
+    z-index:1;
+}
+
+.hoursContent {
+    grid-column-start: 1;
+    grid-row-start: 1;
+    color: #edeec9;
+    padding: 10px;
+}
+
+.locale {
+    margin-left: 290px;
+}
+
+#locale1{
+    margin-left: 290px
+}
+.map {
+    grid-column-start: 15;
+    grid-column-end: 29;
 }
