--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -64,6 +64,18 @@
     height: 20vh;
 }
 
+#ot-widget-container1{
+    display:none;
+}
+
+#ot-widget-container2{
+    display:none;
+}
+
 #ot-widget-container5{
+    display:none;
+}
+
+#ot-widget-container12{
     display:none;
 }
