--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -72,7 +72,43 @@
     display:none;
 }
 
+#ot-widget-container3{
+    display:none;
+}
+
+#ot-widget-container4{
+    display:none;
+}
+
 #ot-widget-container5{
+    display:none;
+}
+
+#ot-widget-container6{
+    display:none;
+}
+
+#ot-widget-container7{
+    display:none;
+}
+
+#ot-widget-container11{
+    display:none;
+}
+
+#ot-widget-container8{
+    display:none;
+}
+
+#ot-widget-container9{
+    display:none;
+}
+
+#ot-widget-container10{
+    display:none;
+}
+
+#ot-widget-container11{
     display:none;
 }
 
