--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -64,9 +64,9 @@
     height: 20vh;
 }
 
-// #ot-widget-container1{
-//     display:none;
-// }
+#ot-widget-container5{
+    display:none;
+}
 
 // #ot-widget-container2{
 //     display:none;
