--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -8,3 +8,13 @@
     color: white;
     font-family: 'Lexend Peta', sans-serif;
 }
+
+.social {
+    margin-right: 20px;
+    color: #3b5998;
+}
+
+.social2 {
+    margin-right: 20px;
+    color: #1da1f2;
+}
