--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -11,10 +11,12 @@
 
 .social {
     margin-right: 20px;
+    font-size: 25px;
     color: #3b5998;
 }
 
 .social2 {
     margin-right: 20px;
+    font-size: 25px;
     color: #1da1f2;
 }
