--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -202,3 +202,113 @@
         padding-bottom: 5px;
     }
 }    
+
+@media screen and (max-width: 1160px) {
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        font-size: 22px;
+        display: inline;
+        color: #edeec9;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 50px;
+        text-align: center;
+        margin-left: -3px;
+    }
+
+    .button {
+        background-color: #30332e;
+        color: white;
+        border:solid;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: -100px;
+        width:20vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        margin-left: -70px;
+        padding-bottom: 5px;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .greyBox {
+        height: 460px;
+        background-color: #7A8693;
+        grid-column-start: 6;
+        grid-column-end: 9;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        margin-top: 35px;
+        z-index: 1;
+    }
+
+    .dish {
+        height: 400px;
+        width: 350px;
+        z-index: 5;
+        grid-column-start: 8;
+        grid-column-end: 9;
+        grid-row-start: 1;
+        margin-top: 69px;
+        margin-right: -85px;
+    }
+    
+    .chef {
+        z-index: 100;
+        height: 250px;
+        width: 320px;
+        margin-top: -375px;
+        grid-column-start: 6
+    }
+
+    .processSummary {
+        color: #edeec9;
+        grid-column-start: 2;
+        grid-column-end: 5;
+        text-align: center;
+        margin-top: -390px;
+        padding-top: -10px;
+        font-size: 20px;
+        width: 300px;
+    
+    }
+
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        font-size: 20px;
+        display: inline;
+        color: #edeec9;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 50px;
+        text-align: center;
+        margin-left: -16px;
+        width: 280px;
+    }
+
+    .button {
+        background-color: #30332e;
+        color: white;
+        border:solid;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: -180px;
+        width:23vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        margin-left: -76px;
+        padding-bottom: 5px;
+    }
+    
+}    
