--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -147,6 +147,18 @@
 }   
 
 @media screen and (max-width: 1301px) {
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        font-size: 24px;
+        display: inline;
+        color: #edeec9;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 50px;
+        text-align: center;
+        margin-left: -3px;
+    }
+
     .processSummary {
         color: #edeec9;
         grid-column-start: 2;
@@ -155,7 +167,57 @@
         margin-top: -400px;
         padding-top: -10px;
         font-size: 22px;
+
+    }
+
+    .greyBox {
+        height: 460px;
+        background-color: #7A8693;
+        grid-column-start: 5;
+        grid-column-end: 9;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        margin-top: 35px;
+        z-index: 1;
+    }
+
+    .dish {
+        height: 400px;
+        width: 350px;
+        z-index: 5;
+        grid-column-start: 7;
+        grid-column-end: 9;
+        grid-row-start: 1;
+        margin-top: 69px;
+        margin-right: -85px;
+    }
     
+    .chef {
+        z-index: 100;
+        height: 300px;
+        width: 320px;
+        margin-top: -405px;
+        margin-left: -5px;
+        grid-column-start: 6
+    }
+
+    .button {
+        background-color: #30332e;
+        color: white;
+        border:solid;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: -110px;
+        width:20vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        margin-left: -155px;
+        padding-bottom: 5px;
     }
 }
 
@@ -198,7 +260,7 @@
         width:20vw;
         height:60px;
         font-family: 'Lexend Zetta', sans-serif;
-        margin-left: -90px;
+        margin-left: -155px;
         padding-bottom: 5px;
     }
 }    
@@ -231,12 +293,12 @@
         width:20vw;
         height:60px;
         font-family: 'Lexend Zetta', sans-serif;
-        margin-left: -70px;
+        margin-left: -145px;
         padding-bottom: 5px;
     }
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 1070px) {
     .greyBox {
         height: 460px;
         background-color: #7A8693;
@@ -303,12 +365,97 @@
         margin: 4px 2px;
         cursor: pointer;
         grid-column-start: 3;
+        margin-top: -480px;
+        width:23vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        margin-left: -109px;
+        padding-bottom: 5px;
+    }
+    
+}
+
+@media screen and (max-width: 1070px) {
+    .process {
+        background-color:#30332e;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        height: 1080px;
+    }
+
+    .greyBox {
+        height: 460px;
+        background-color: #7A8693;
+        grid-row-start: 2;
+        margin-top: -195px;
+        margin-left: -300px;
+        width: 460px;
+        z-index: 1;
+    }
+
+    .dish {
+        height: 400px;
+        width: 350px;
+        z-index: 5;
+        grid-column-start: 4;
+        grid-column-end: 7;
+        grid-row-start: 2;
+        margin-top: -80px;
+        margin-left: -130px;
+    }
+    
+    .chef {
+        z-index: 100;
+        height: 350px;
+        width: 420px;
+        margin-top: -375px;
+        grid-column-start: 6;
+        margin-left: -330px;
+    }
+
+    .processSummary {
+        color: #edeec9;
+        grid-column-start: 5;
+        grid-column-end: 7;
+        text-align: center;
+        padding-top: -10px;
+        font-size: 25px;
+        margin-left: -440px;
+        margin-top: 90px;
+        margin-bottom: 200px;
+        width: 600px;
+    }
+
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        font-size: 28px;
+        display: inline;
+        color: #edeec9;
+        grid-column-start: 5;
+        text-align: center;
+        justify-content: center;
+        margin-left: 100px;
+        margin-top: 20px;
+    }
+
+    .button {
+        background-color: #30332e;
+        color: white;
+        border:solid;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
         margin-top: -180px;
         width:23vw;
         height:60px;
         font-family: 'Lexend Zetta', sans-serif;
-        margin-left: -76px;
+        margin-left: -109px;
         padding-bottom: 5px;
+        display: none;
     }
     
 }    
