--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -20,3 +20,29 @@
     font-size: 25px;
     color: #1da1f2;
 }
+
+@media screen and (max-width: 770px) {
+    .footer {
+        background-color: #525962;
+        height: 60px;
+    }
+    
+    .footerMessage {
+        text-align: center;
+        color: white;
+        font-family: 'Lexend Peta', sans-serif;
+        font-size: 14px;
+    }
+    
+    .social {
+        margin-right: 20px;
+        font-size: 23px;
+        color: #3b5998;
+    }
+    
+    .social2 {
+        margin-right: 20px;
+        font-size: 23px;
+        color: #1da1f2;
+    }
+}    
