--- a/src/components/Dishitem/_dishitem.scss
+++ b/src/components/Dishitem/_dishitem.scss
@@ -56,3 +56,48 @@
         font-weight: 600;
     }
 }    
+
+@media screen and (min-width: 771px) {
+    .mobileApiOutput {
+        display: none;
+    }
+}   
+
+@media screen and (max-width: 770px) {
+    .seasonalApiOutput {
+        display: none;
+    }
+
+    .mobileApiOutput {
+        margin-top: 10px;
+    }
+
+    .mobileDishTitle {
+        margin-bottom: 60px;
+        margin-left: 50px;
+        grid-column-start: 4;
+        font-family: 'Lexend Zetta', sans-serif;
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .mobileDishImage {
+        margin-top: -44px;
+        margin-bottom: 10px;
+        margin-left: 95px;
+        width:550px;
+        height:300px;
+        grid-column-start: 2;
+        z-index: 1;
+    }
+
+    .mobileDishContent {
+        margin-top: 15px;
+        font-size: 24px;
+        grid-column-start: 4;
+        grid-column-end: 10;
+        margin-bottom: 30px;
+        width: 500px;
+        margin-left: 120px;
+    }
+}    
