--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -458,4 +458,16 @@
         display: none;
     }
     
+}
+
+@media screen and (max-width: 770px) {
+    .greyBox {
+        height: 460px;
+        background-color: #7A8693;
+        grid-row-start: 2;
+        margin-top: -195px;
+        margin-left: -300px;
+        width: 400px;
+        z-index: 1;
+    }
 }    
