--- a/src/components/Dishitem/_dishitem.scss
+++ b/src/components/Dishitem/_dishitem.scss
@@ -101,3 +101,38 @@
         margin-left: 120px;
     }
 }    
+
+@media screen and (max-width: 570px) {
+    .mobileApiOutput {
+        margin-top: 10px;
+    }
+
+    .mobileDishTitle {
+        margin-bottom: 60px;
+        margin-left: -70px;
+        grid-column-start: 4;
+        font-family: 'Lexend Zetta', sans-serif;
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .mobileDishImage {
+        margin-top: -44px;
+        margin-bottom: 10px;
+        margin-left: 0px;
+        width:550px;
+        height:300px;
+        grid-column-start: 2;
+        z-index: 1;
+    }
+
+    .mobileDishContent {
+        margin-top: 15px;
+        font-size: 24px;
+        grid-column-start: 4;
+        grid-column-end: 10;
+        margin-bottom: 30px;
+        width: 500px;
+        margin-left: 50px;
+    }
+}    
