--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -387,7 +387,7 @@
         height: 460px;
         background-color: #7A8693;
         grid-row-start: 2;
-        margin-top: -195px;
+        margin-top: -25px;
         margin-left: -300px;
         width: 460px;
         z-index: 1;
@@ -400,7 +400,7 @@
         grid-column-start: 4;
         grid-column-end: 7;
         grid-row-start: 2;
-        margin-top: -80px;
+        margin-top: 0px;
         margin-left: -130px;
     }
     
@@ -408,22 +408,19 @@
         z-index: 100;
         height: 350px;
         width: 420px;
-        margin-top: -375px;
+        margin-top: -315px;
         grid-column-start: 6;
         margin-left: -330px;
     }
 
     .processSummary {
         color: #edeec9;
-        grid-column-start: 5;
-        grid-column-end: 7;
         text-align: center;
         padding-top: -10px;
         font-size: 25px;
-        margin-left: -440px;
-        margin-top: 90px;
-        margin-bottom: 200px;
+        margin-left: 110px;
         width: 600px;
+        margin-top: -870px;
     }
 
     .processHeading {
@@ -431,11 +428,9 @@
         font-size: 28px;
         display: inline;
         color: #edeec9;
-        grid-column-start: 5;
-        text-align: center;
-        justify-content: center;
-        margin-left: 100px;
-        margin-top: 20px;
+        grid-column-start: 9;
+        margin-top: -900px;
+        margin-left: 55px;
     }
 
     .button {
@@ -448,26 +443,177 @@
         font-size: 16px;
         margin: 4px 2px;
         cursor: pointer;
-        grid-column-start: 3;
-        margin-top: -180px;
+        grid-row-start: 1;
         width:23vw;
         height:60px;
         font-family: 'Lexend Zetta', sans-serif;
-        margin-left: -109px;
         padding-bottom: 5px;
-        display: none;
+        grid-column-start: 5;
+        margin-top: 350px;
+        margin-left: 70px;
     }
     
 }
 
 @media screen and (max-width: 770px) {
+    .process {
+        background-color:#30332e;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        height: 1080px;
+    }
+
     .greyBox {
         height: 460px;
         background-color: #7A8693;
         grid-row-start: 2;
-        margin-top: -195px;
+        margin-top: -25px;
         margin-left: -300px;
-        width: 400px;
+        width: 460px;
         z-index: 1;
     }
-}    
+
+    .dish {
+        height: 400px;
+        width: 350px;
+        z-index: 5;
+        grid-column-start: 4;
+        grid-column-end: 7;
+        grid-row-start: 2;
+        margin-top: 0px;
+        margin-left: -130px;
+    }
+    
+    .chef {
+        z-index: 100;
+        height: 350px;
+        width: 420px;
+        margin-top: -315px;
+        grid-column-start: 6;
+        margin-left: -330px;
+    }
+
+    .processSummary {
+        color: #edeec9;
+        text-align: center;
+        padding-top: -10px;
+        font-size: 25px;
+        margin-left: 30px;
+        width: 600px;
+        margin-top: -870px;
+    }
+
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        font-size: 28px;
+        display: inline;
+        color: #edeec9;
+        grid-column-start: 9;
+        margin-top: -900px;
+        margin-left: 55px;
+    }
+
+    .button {
+        background-color: #30332e;
+        color: white;
+        border:solid;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-row-start: 1;
+        width:28vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 5px;
+        grid-column-start: 5;
+        margin-top: 350px;
+        margin-left: 70px;
+    }
+}
+
+@media screen and (max-width: 570px) {
+    .process {
+        background-color:#30332e;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        height: 880px;
+    }
+    
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        font-size: 28px;
+        display: inline;
+        color: #edeec9;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 50px;
+        margin-left:110px;
+        text-align: center;
+    }
+    
+    .processSummary {
+        color: #edeec9;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        text-align: center;
+        margin-top: -700px;
+        margin-left: -7px;
+        padding-top: -10px;
+        font-size: 22px;
+        width: 500px;
+    }
+    
+    .greyBox {
+        height: 260px;
+        background-color: #7A8693;
+        grid-column-start: 5;
+        grid-column-end: 7;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        margin-left: -335px;
+        margin-top: 500px;
+        z-index: 1;
+    }
+    
+    .dish {
+        height: 200px;
+        width: 300px;
+        z-index: 5;
+        grid-column-start: 5;
+        grid-column-end: 9;
+        grid-row-start: 1;
+        margin-top: 569px;
+        margin-left: -270px;
+    }
+    
+    .chef {
+        z-index: 100;
+        height: 150px;
+        width: 350px;
+        margin-top: -302px;
+        margin-left: -250px;
+    }
+    
+    .button {
+        background-color: #30332e;
+        color: white;
+        border:solid;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-row-start: 1;
+        width:38vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 5px;
+        grid-column-start: 5;
+        margin-top: 360px;
+        margin-left: 45px;
+    }
+}
