--- a/src/sass/_seasonal.scss
+++ b/src/sass/_seasonal.scss
@@ -52,4 +52,29 @@
         grid-column-start: 1;
         grid-column-end: 5;
     }
+}  
+
+@media screen and (max-width: 570px) {
+    .seasonal {
+        margin-top: 1000px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        height: 1160px;
+    }
+    
+    .seasonalHeading {
+        text-align: center;
+        margin-top:-130px;
+        border-bottom: 1px solid black;
+        height: 50px;
+        width:500px;
+        font-family: 'Lexend Zetta', sans-serif;
+        grid-column-start: 3;
+        justify-content:center;
+    }
+    
+    .dishItems {
+        grid-column-start: 1;
+        grid-column-end: 5;
+    }
 }    
