--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -232,6 +232,6 @@ a {
     background-size: center;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 100vh;
+    height: 1000px;
 }
 }  
