--- a/src/components/Dishitem/_dishitem.scss
+++ b/src/components/Dishitem/_dishitem.scss
@@ -120,7 +120,7 @@
         margin-top: -44px;
         margin-bottom: 10px;
         margin-left: 0px;
-        width:550px;
+        width:100vw;
         height:300px;
         grid-column-start: 2;
         z-index: 1;
@@ -132,7 +132,7 @@
         grid-column-start: 4;
         grid-column-end: 10;
         margin-bottom: 30px;
-        width: 500px;
+        width: 400px;
         margin-left: 50px;
     }
 }    
