--- a/src/components/Polygon/_polygon.scss
+++ b/src/components/Polygon/_polygon.scss
@@ -29,3 +29,20 @@
         width: 99.2vw;
     }
 }    
+
+@media screen and (max-width: 470px) {
+    .polygonWrap {
+        filter: drop-shadow(-2px -5px 2px rgba(0,0,0,0.8))
+    }
+    
+    .polygonDiv {
+        display: grid;
+        grid-template-columns: 50vw 50vw;
+        background-color: #525962;
+        clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+        grid-column-start: 1;
+        grid-column-end: 3;
+        height: 399px;
+        width: 96vw;
+    }
+}    
