--- a/src/sass/_hours.scss
+++ b/src/sass/_hours.scss
@@ -199,3 +199,66 @@
         margin-left: -0px;
     }
 }    
+
+@media screen and (max-width: 470px) {
+    .hours {
+        background-color:#525962;
+        display: grid;
+        grid-template-columns: repeat(28, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        height: 970px;
+        padding: 20px;
+    }
+    
+    #hoursCard {
+        background-color: #edeec9; 
+        grid-column-start: 1;
+        grid-column-end: 29;
+        -webkit-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        -moz-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        z-index: 4;
+        height: 380px;
+    }
+    
+    #hoursCardInner {
+        background-color: #30332e; 
+        height:360px;
+        grid-column-start: 1;
+        grid-column-end: 14;
+        margin-left:10px;
+        margin-right:10px;
+        margin-top:10px;
+        margin-bottom: 10px;
+        z-index:1;
+
+    }
+    
+    .hoursContent {
+        grid-column-start: 1;
+        grid-row-start: 1;
+        color: #edeec9;
+        padding: 10px;
+
+    }
+    
+    .locale {
+        margin-top: 5px;
+        margin-left: 50px;
+    }
+    
+    #locale1{
+        margin-left: 50px;
+    }
+    .map {
+        grid-column-start: 6;
+        grid-column-end: 24;
+        display:none;
+    }
+
+    .mobileMap {
+        grid-row-start: 2;
+        margin-top: 13px;
+        margin-left: -17px;
+    }
+}       
