--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -617,3 +617,88 @@
         margin-left: 85px;
     }
 }
+
+@media screen and (max-width: 470px) {
+    .process {
+        background-color:#30332e;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        height: 880px;
+        width: 470px;
+    }
+    
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        font-size: 28px;
+        display: inline;
+        color: #edeec9;
+        grid-column-start: 1;
+        margin-top: 50px;
+        margin-left:110px;
+        margin-top: -750px;
+        text-align: center;
+    }
+    
+    .processSummary {
+        color: #edeec9;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        text-align: center;
+        margin-top: -700px;
+        padding-top: -10px;
+        font-size: 22px;
+        width: 400px;
+    }
+    
+    .greyBox {
+        height: 200px;
+        background-color: #7A8693;
+        grid-column-start: 3;
+        grid-column-end: 5;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        width: 300px;
+        margin-left: 15px;
+        margin-top: 500px;
+        z-index: 1;
+    }
+    
+    .dish {
+        height: 200px;
+        width: 300px;
+        z-index: 5;
+        grid-column-start: 5;
+        grid-column-end: 9;
+        grid-row-start: 1;
+        margin-top: 569px;
+        margin-left: -270px;
+    }
+    
+    .chef {
+        z-index: 100;
+        height: 150px;
+        width: 250px;
+        margin-top: -370px;
+        margin-left: -250px;
+    }
+    
+    .button {
+        background-color: #30332e;
+        color: white;
+        border:solid;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-row-start: 1;
+        width:60vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 5px;
+        grid-column-start: 3;
+        margin-top: 380px;
+        margin-left: 85px;
+    }
+}    
