--- a/src/components/Gsaphero/_gsaphero.scss
+++ b/src/components/Gsaphero/_gsaphero.scss
@@ -13,3 +13,14 @@
      font-family: 'Lexend Zetta', sans-serif;
      z-index: 10;
  }
+
+ @media screen and (max-width: 470px) {
+    .gsaphero {
+        background-image: url("gsap1.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        width:100%;
+        height:800px;
+        background-position: center center;
+    }
+ }    
