--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -624,7 +624,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
         height: 880px;
-        width: 470px;
+        width: 100%;
     }
     
     .processHeading {
