--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -238,7 +238,7 @@ a {
 
 @media screen and (max-width: 470px) {
   .header {
-    width: auto;
+    width: 100%;
     background-image: url("background.jpg");
     background-size: center;
     background-repeat: no-repeat;
