--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -239,6 +239,7 @@ a {
 @media screen and (max-width: 470px) {
   .header {
     width: 100%;
+    height: 100vh;
     background-image: url("background.jpg");
     background-size: center;
     background-repeat: no-repeat;
