--- a/src/components/Dishitem/_dishitem.scss
+++ b/src/components/Dishitem/_dishitem.scss
@@ -109,8 +109,6 @@
 
     .mobileDishTitle {
         margin-bottom: 60px;
-        margin-left: -70px;
-        grid-column-start: 4;
         font-family: 'Lexend Zetta', sans-serif;
         font-size: 20px;
         text-align: center;
@@ -118,12 +116,9 @@
 
     .mobileDishImage {
         margin-bottom: 10px;
-        margin-left: 0px;
-        height:600px;
-        width:400px;
-        height:100px;
-        grid-column-start: 2;
-        z-index: 1;
+        height:300px;
+        width:80vw;
+        margin-left: 40px;
     }
 
     .mobileDishContent {
