--- a/src/sass/_seasonal.scss
+++ b/src/sass/_seasonal.scss
@@ -56,26 +56,25 @@
 
 @media screen and (max-width: 570px) {
     .seasonal {
-        margin-top: 1000px;
+        margin-top: 700px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         height: 1960px;
     }
     
     .seasonalHeading {
+        margin-top: 200px;
         text-align: center;
-        margin-top:-130px;
         border-bottom: 1px solid black;
         height: 50px;
         width:300px;
         font-family: 'Lexend Zetta', sans-serif;
         grid-column-start: 3;
         justify-content:center;
-        font-size: 23px;
+        font-size: 20px;
     }
-    
-    .dishItems {
-        grid-column-start: 1;
-        grid-column-end: 5;
-    }
+}   
+
+@media screen and (max-width: 470px) {
+
 }    
