--- a/src/sass/_seasonal.scss
+++ b/src/sass/_seasonal.scss
@@ -72,6 +72,7 @@
         grid-column-start: 3;
         justify-content:center;
         font-size: 20px;
+        margin-bottom: -270px;
     }
 }   
 
