--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -67,6 +67,7 @@
 
 @media screen and (max-width: 840px) {
     .gallery {
+        margin-top: -1px;
         padding: 30px;
         background-color:#525962;
         display: grid;
