--- a/src/components/Dishitem/_dishitem.scss
+++ b/src/components/Dishitem/_dishitem.scss
@@ -127,7 +127,38 @@
         grid-column-start: 4;
         grid-column-end: 10;
         margin-bottom: 30px;
-        width: 300px;
+        width: 450px;
         margin-left: 50px;
+    }
+} 
+
+@media screen and (max-width: 470px) {
+    .mobileApiOutput {
+        margin-top: -10px;
+    }
+
+    .mobileDishTitle {
+        margin-bottom: 60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        font-size: 20px;
+        text-align: center;
+        margin-left: -5px;
+    }
+
+    .mobileDishImage {
+        margin-bottom: 10px;
+        height:300px;
+        width:80vw;
+        margin-left: 35px;
+    }
+
+    .mobileDishContent {
+        margin-top: 15px;
+        font-size: 20px;
+        grid-column-start: 4;
+        grid-column-end: 10;
+        margin-bottom: 30px;
+        width: 250px;
+        margin-left: 36px;
     }
 }    
