--- a/src/components/Gsaphero/_gsaphero.scss
+++ b/src/components/Gsaphero/_gsaphero.scss
@@ -14,6 +14,17 @@
      z-index: 10;
  }
 
+ @media screen and (max-width: 570px) {
+    .gsapHeading {
+        font-size: 20px;
+        text-align: center;
+        margin-top: 410px;
+        color: white;
+        font-family: 'Lexend Zetta', sans-serif;
+        z-index: 10;
+    }
+}
+
  @media screen and (max-width: 470px) {
     .gsaphero {
         background-image: url("gsap1.jpg");
@@ -23,4 +34,15 @@
         height:800px;
         background-position: center center;
     }
- }    
+ }        
+
+ @media screen and (max-width: 320px) {
+    .gsapHeading {
+        font-size: 16px;
+        text-align: center;
+        margin-top: 410px;
+        color: white;
+        font-family: 'Lexend Zetta', sans-serif;
+        z-index: 10;
+    }
+ }   
