--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -364,6 +364,7 @@
         grid-column-start: 3;
         z-index: 100;
         margin-left: 20px;
+        border-bottom: 1px white solid;
         // padding-bottom: 0px;
     }
     
@@ -375,11 +376,20 @@
     }
 }    
 
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 470px) {
     .menuItems {
         color: #edeec9;
         margin-left: 20px;
         padding-bottom:1px;
-        font-size: 18px;
+        font-size: 15px;
+    }
+
+    .lunchHeading {
+        color: #edeec9;
+        font-weight:100;
+        grid-column-start: 3;
+        z-index: 100;
+        margin-left: 20px;
+        font-size: 21px;
     }
 }    
