--- a/src/components/Dishitem/_dishitem.scss
+++ b/src/components/Dishitem/_dishitem.scss
@@ -112,6 +112,7 @@
         font-family: 'Lexend Zetta', sans-serif;
         font-size: 20px;
         text-align: center;
+        margin-left: 7px;
     }
 
     .mobileDishImage {
