--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -77,3 +77,16 @@
         height: 330px;
     }
 }  
+
+@media screen and (max-width: 470px) {
+    .gallery {
+        margin-top: -300px;
+        padding: 30px;
+        background-color:#525962;
+        display: grid;
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: repeat(5, 5vw);
+        grid-gap: 15px;
+        height: 330px;
+    }
+}    
